--- a/package.json
+++ b/package.json
@@ -13,5 +13,9 @@
         "laravel-vite-plugin": "^0.8.0",
         "sass": "^1.56.1",
         "vite": "^4.0.0"
+    },
+    "dependencies": {
+        "idb-keyval": "^6.2.1",
+        "jquery": "^3.7.0"
     }
 }
